# trt-mnist

./: .gitignore  Dockerfile  README.md  pyproject.toml
trt_mnist/: bench.py  inference.py  model.py  train.py
